# yaqd-andor

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-mypy.yml  run-entry-points.yml
supplemental/: CameraInformation.py  SingleScan.py
yaq-config-examples/: andor-neo.toml  config_wright_pl.toml
yaqd_andor/: VERSION  __init__.py  _andor_client_example.py  _andor_client_example_v2.py  _andor_neo.py  _andor_sdk2.py  _andor_sdk3.py  _andor_simcam.py  _andor_sona.py  _andorsdk2_ixon.py  _neo_triggered.py  _version.py  andor-neo.avpr  andor-neo.toml  andor-simcam.avpr  andor-simcam.toml  andor-sona.avpr  andor-sona.toml  andorsdk2-ixon.avpr  andorsdk2-ixon.toml  atcore.py  atmcd.py  atmcd_acquisition.py  features.py  neo-triggered.avpr  neo-triggered.toml
